--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -17,44 +17,6 @@
         min-height: 100vh;
     }
 
-    /* Cinta superior animada estilo anterior con logo */
-    .top-ribbon {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background-color: #007bff; /* color más fuerte */
-        color: white;
-        padding: 6px 0;
-        font-size: 14px;
-        font-weight: bold;
-        display: flex;
-        align-items: center;
-        overflow: hidden;
-        z-index: 2000;
-    }
-
-    .scroll-container {
-        display: flex;
-        align-items: center;
-        animation: scroll-text 20s linear infinite;
-        gap: 15px;
-    }
-
-    .scroll-container img {
-        height: 24px; /* logo moderado */
-    }
-
-    .scroll-container span {
-        white-space: nowrap;
-        font-size: 14px;
-    }
-
-    @keyframes scroll-text {
-        0% { transform: translateX(100%); }
-        100% { transform: translateX(-100%); }
-    }
-
     .logo {
         max-width: 180px;
         margin-bottom: 20px;
@@ -125,6 +87,7 @@
         100% { transform: translateY(-8px); }
     }
 
+    /* Carrusel de imágenes */
     .carousel {
         overflow: hidden;
         width: 100%;
@@ -173,22 +136,54 @@
         color: #004080;
     }
 
+    /* Ajuste solo para móviles */
     @media (max-width: 600px) {
         .download-link {
             width: 80%;
             font-size: 18px;
         }
     }
+
+    /* Cinta corporativa */
+    .corporate-ticker {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #003366;
+        overflow: hidden;
+        height: 40px;
+        z-index: 9999;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+        display: flex;
+        align-items: center;
+        box-sizing: border-box;
+    }
+
+    .ticker-text {
+        display: inline-block;
+        white-space: nowrap;
+        color: #ffffff;
+        font-weight: 600;
+        font-family: 'Arial', sans-serif;
+        font-size: 16px;
+        padding-left: 100%;
+        animation: scrollTicker 20s linear infinite;
+    }
+
+    @keyframes scrollTicker {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-100%); }
+    }
 </style>
 </head>
 <body>
 
-<!-- Cinta superior estilo original con logo RustDesk -->
-<div class="top-ribbon">
-    <div class="scroll-container">
-        <img src="rustdesk-logo.png" alt="RustDesk Logo">
-        <span>Distribución oficial y segura de RustDesk por Robert Software - ¡Descargue la versión más reciente directamente desde GitHub!</span>
-    </div>
+<!-- Cinta corporativa -->
+<div class="corporate-ticker">
+  <div class="ticker-text">
+    Distribución oficial y segura de RustDesk por Robert Software - Descargue las versiones más recientes y confiables para Windows y macOS directamente desde los enlaces oficiales.
+  </div>
 </div>
 
 <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
@@ -211,6 +206,7 @@
    <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
+<!-- Carrusel de 4 imágenes -->
 <div class="carousel">
     <div class="carousel-track">
         <img src="1.jpg" alt="RustDesk 1">
