--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -84,7 +84,7 @@
 
     @keyframes float {
         0% { transform: translateY(0); }
-        100% { transform: translateY(-8px); }
+        100% { transform: translateY(-2px); }
     }
 
     /* Carrusel de imágenes */
@@ -144,54 +144,54 @@
         }
     }
 
-    /* Cinta corporativa */
+    /* Cinta corporativa con logo RustDesk */
     .corporate-ticker {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        background-color: #1e3a5f; /* azul más claro y profesional */
+        background-color: #0059a6; /* color más claro que el azul oscuro */
         overflow: hidden;
-        height: 50px;
+        height: 50px; /* altura de la cinta */
         z-index: 9999;
         box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         display: flex;
         align-items: center;
         box-sizing: border-box;
-        padding-left: 10px;
     }
 
-    .ticker-text {
-        display: inline-block;
-        white-space: nowrap;
-        color: #ffffff; /* letras blancas para contraste con logo negro */
-        font-weight: 600;
-        font-family: 'Arial', sans-serif;
-        font-size: 16px;
-        padding-left: 100%;
-        animation: scrollTicker 20s linear infinite;
+    .ticker-content {
         display: flex;
         align-items: center;
+        white-space: nowrap;
+        animation: scrollTicker 20s linear infinite;
         gap: 15px;
     }
 
-    .ticker-text img {
-        height: 30px; /* logo más grande */
+    .ticker-content img {
+        height: 40px; /* logo más grande pero dentro de la cinta */
+    }
+
+    .ticker-content span {
+        color: #ffffff; /* letras blancas resaltando sobre azul más claro */
+        font-weight: 600;
+        font-family: 'Arial', sans-serif;
+        font-size: 16px;
     }
 
     @keyframes scrollTicker {
-        0% { transform: translateX(0); }
+        0% { transform: translateX(100%); }
         100% { transform: translateX(-100%); }
     }
 </style>
 </head>
 <body>
 
-<!-- Cinta corporativa -->
+<!-- Cinta corporativa con logo RustDesk -->
 <div class="corporate-ticker">
-  <div class="ticker-text">
-    <img src="rustdesk-logo.png" alt="RustDesk">
-    Distribución oficial y segura de RustDesk por Robert Software - Descargue las versiones más recientes y confiables para Windows y macOS directamente desde los enlaces oficiales.
+  <div class="ticker-content">
+    <img src="rustdesk-logo.png" alt="RustDesk Logo">
+    <span>Distribución oficial y segura de RustDesk por Robert Software - Descargue las versiones más recientes y confiables para Windows y macOS directamente desde los enlaces oficiales.</span>
   </div>
 </div>
 
