--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -136,6 +136,7 @@
         color: #004080;
     }
 
+    /* Ajuste solo para móviles */
     @media (max-width: 600px) {
         .download-link {
             width: 80%;
@@ -149,13 +150,14 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 40px; /* misma altura que el index original */
         background-color: #003366;
         overflow: hidden;
+        height: 40px;
         z-index: 9999;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         display: flex;
         align-items: center;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+        box-sizing: border-box;
     }
 
     .ticker-content {
@@ -163,11 +165,11 @@
         align-items: center;
         white-space: nowrap;
         animation: scrollTicker 20s linear infinite;
-        gap: 12px;
+        gap: 15px;
     }
 
     .ticker-content img {
-        height: 28px; /* logo más grande pero cabe en la cinta */
+        height: 32px; /* logo más grande */
     }
 
     .ticker-content span {
