--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -150,7 +150,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        background-color: #003366;
+        background-color: #a8c4e6; /* color más claro */
         overflow: hidden;
         height: 40px;
         z-index: 9999;
