--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -73,7 +73,7 @@
 
     .arrow-top {
         position: fixed;
-        top: 20px;
+        top: 45px; /* Ajustado para estar justo debajo de la cinta */
         right: 60px;
         width: 60px;
         z-index: 1000;
@@ -218,6 +218,7 @@
   </div>
 </div>
 
+<!-- GIF justo debajo de la cinta -->
 <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
 
 <p class="backup-text">Respaldado por:</p>
