--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -73,7 +73,7 @@
 
     .arrow-top {
         position: fixed;
-        top: 40px; /* debajo de la cinta */
+        top: 50px; /* GIF un poco más abajo que antes */
         right: 60px;
         width: 60px;
         z-index: 1000;
