--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -1,89 +1,323 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Descargando RustDesk</title>
-  <style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Descargar RustDesk - RobertSoftware</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<style>
     body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f9f9f9;
+        font-family: Arial, sans-serif;
+        background-color: #e6eefb;
+        color: #333;
+        text-align: center;
+        padding: 40px 20px;
+        margin: 0;
+        position: relative;
+        min-height: 100vh;
     }
-    .container {
-      text-align: center;
-      background: #fff;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+
+    .logo {
+        max-width: 180px;
+        margin-bottom: 20px;
     }
+
+    .backup-text {
+        font-size: 14px;
+        margin-bottom: 8px;
+        color: #555;
+    }
+
     h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
-      color: #333;
+        font-size: 36px; 
+        margin: 15px 0;
+        font-weight: bold;
+        color: #1a1a1a;
+        text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
     }
-    p {
-      font-size: 16px;
-      color: #555;
-      margin-bottom: 30px;
+
+    .message {
+        font-size: 16px;
+        margin-top: 15px;
+        line-height: 1.5;
+        color: #333;
     }
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
+
+    .download-link {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        margin: 10px;
+        padding: 12px 25px;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        border-radius: 8px;
+        font-weight: bold;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s, transform 0.2s;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
-    .btn {
-      padding: 12px 24px;
-      text-decoration: none;
-      color: #fff;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
-      transition: background 0.3s;
+
+    .download-link:hover {
+        background-color: #0056b3;
+        transform: translateY(-2px);
     }
-    .btn:hover {
-      opacity: 0.9;
+
+    .download-link img {
+        width: 24px;
+        height: 24px;
     }
-    .btn-win {
-      background-color: #0078d7;
+
+    .arrow-top {
+        position: fixed;
+        top: 50px; /* GIF un poco más abajo que antes */
+        right: 60px;
+        width: 60px;
+        z-index: 1000;
+        pointer-events: none;
+        display: none;
+        animation: float 2s ease-in-out infinite alternate;
     }
-    .btn-mac {
-      background-color: #333;
+
+    @keyframes float {
+        0% { transform: translateY(0); }
+        100% { transform: translateY(-8px); }
     }
-  </style>
+
+    footer {
+        font-size: 14px;
+        color: #555;
+        text-align: center;
+        background-color: #e6eefb;
+        padding: 10px 20px;
+        line-height: 1.4;
+        max-width: 800px;
+        margin: 40px auto 0;
+    }
+
+    footer a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    footer a:hover {
+        text-decoration: underline;
+        color: #004080;
+    }
+
+    /* Ajuste solo para móviles */
+    @media (max-width: 600px) {
+        .download-link {
+            width: 80%;
+            font-size: 18px;
+        }
+    }
+
+    /* Cinta corporativa */
+    .corporate-ticker {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #a8c4e6; /* color más claro */
+        overflow: hidden;
+        height: 40px;
+        z-index: 9999;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+        display: flex;
+        align-items: center;
+        box-sizing: border-box;
+    }
+
+    .ticker-text {
+        display: inline-block;
+        white-space: nowrap;
+        color: #ffffff;
+        font-weight: 600;
+        font-family: 'Arial', sans-serif;
+        font-size: 16px;
+        padding-left: 100%;
+        animation: scrollTicker 20s linear infinite;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .ticker-text img {
+        height: 28px; /* logos dentro de la cinta */
+    }
+
+    @keyframes scrollTicker {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-100%); }
+    }
+
+    /* Carrusel con flechas y autoplay */
+    .carousel {
+        position: relative;
+        max-width: 600px;
+        margin: 30px auto;
+        overflow: hidden;
+        border-radius: 12px;
+        border: 1px solid rgba(0,0,0,0.05);
+        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+
+    .carousel-track {
+        display: flex;
+        transition: transform 0.5s ease;
+        touch-action: pan-x;
+    }
+
+    .carousel-track img {
+        width: 100%;
+        flex-shrink: 0;
+        border-radius: 12px;
+        user-select: none;
+        pointer-events: none;
+    }
+
+    .carousel-arrow {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(0,0,0,0.3);
+        color: white;
+        border: none;
+        font-size: 24px;
+        cursor: pointer;
+        padding: 8px 12px;
+        border-radius: 50%;
+        z-index: 10;
+        transition: background-color 0.2s;
+    }
+
+    .carousel-arrow:hover {
+        background-color: rgba(0,0,0,0.6);
+    }
+
+    .carousel-arrow-left {
+        left: 10px;
+    }
+
+    .carousel-arrow-right {
+        right: 10px;
+    }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>Descarga RustDesk</h1>
-    <p>Seleccione su sistema operativo y haga clic en el botón correspondiente:</p>
-    <div class="buttons">
-      <a href="rustdesk-windows.exe" id="downloadWin" class="btn btn-win">Windows</a>
-      <a href="rustdesk-mac.dmg" id="downloadMac" class="btn btn-mac">macOS</a>
-    </div>
-    <p style="margin-top:20px; font-size:14px; color:#777;">
-      Si la descarga no inicia, use los botones de arriba.
-    </p>
+
+<!-- Cinta corporativa con logos -->
+<div class="corporate-ticker">
+  <div class="ticker-text">
+    <img src="rustdesk-logo.png" alt="RustDesk Logo">
+    <img src="solzze-logo.png" alt="Solzze Logo">
+    <img src="rs-logo.png" alt="RS Logo">
+    Distribución oficial y segura de RustDesk por Robert Software - Descargue las versiones más recientes y confiables para Windows y macOS directamente desde los enlaces oficiales.
   </div>
+</div>
 
-  <script>
-    // Contador Windows
-    document.getElementById("downloadWin").addEventListener("click", function() {
-      fetch("https://api.counterapi.dev/v2/rs/Win/up")
-        .then(r => r.json())
-        .then(d => console.log("Contador Windows actualizado:", d));
+<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
+
+<p class="backup-text">Respaldado por:</p>
+<img src="logo.png" alt="RobertSoftware" class="logo">
+
+<h1>RustDesk</h1>
+<p class="message">
+    Seleccione su sistema operativo para iniciar la descarga de RustDesk.
+</p>
+
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
+   class="download-link" id="btnWin" download>
+   <img src="windows.svg" alt="Windows"> Descargar para Windows
+</a>
+
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
+   class="download-link" id="btnMac" download>
+   <img src="macos.svg" alt="macOS"> Descargar para macOS
+</a>
+
+<!-- Carrusel de 4 imágenes con flechas -->
+<div class="carousel">
+    <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
+    <div class="carousel-track">
+        <img src="1.jpg" alt="RustDesk 1">
+        <img src="2.png" alt="RustDesk 2">
+        <img src="3.png" alt="RustDesk 3">
+        <img src="4.png" alt="RustDesk 4">
+    </div>
+    <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
+</div>
+
+<script>
+    const gif = document.getElementById('downloadGif');
+    const buttons = [document.getElementById('btnWin'), document.getElementById('btnMac')];
+
+    buttons.forEach(btn => {
+        btn.addEventListener('click', () => {
+            gif.style.display = 'block';
+        });
     });
 
-    // Contador macOS
-    document.getElementById("downloadMac").addEventListener("click", function() {
-      fetch("https://api.counterapi.dev/v2/rs/macOS/up")
-        .then(r => r.json())
-        .then(d => console.log("Contador macOS actualizado:", d));
+    // Carrusel
+    const track = document.querySelector('.carousel-track');
+    const slides = Array.from(track.children);
+    const prevButton = document.querySelector('.carousel-arrow-left');
+    const nextButton = document.querySelector('.carousel-arrow-right');
+    let index = 0;
+    const total = slides.length;
+
+    function updateCarousel() {
+        track.style.transform = `translateX(-${index * 100}%)`;
+    }
+
+    nextButton.addEventListener('click', () => {
+        index = (index + 1) % total;
+        updateCarousel();
     });
-  </script>
+
+    prevButton.addEventListener('click', () => {
+        index = (index - 1 + total) % total;
+        updateCarousel();
+    });
+
+    // Autoplay lento
+    setInterval(() => {
+        index = (index + 1) % total;
+        updateCarousel();
+    }, 5000); // cambia cada 5 segundos
+
+    // Swipe para móviles
+    let startX = 0;
+    let isDragging = false;
+
+    track.addEventListener('touchstart', e => {
+        startX = e.touches[0].clientX;
+        isDragging = true;
+    });
+
+    track.addEventListener('touchmove', e => {
+        if(!isDragging) return;
+        const moveX = e.touches[0].clientX;
+        const diff = startX - moveX;
+        if(diff > 50){ index = (index + 1) % total; updateCarousel(); isDragging=false; }
+        else if(diff < -50){ index = (index - 1 + total) % total; updateCarousel(); isDragging=false; }
+    });
+
+    track.addEventListener('touchend', () => { isDragging = false; });
+</script>
+
+<footer>
+    <p>Distribución segura de RustDesk por <strong>Robert Software</strong></p>
+    <p>© 2025 Robert Software. Todos los derechos reservados.</p>
+    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
+        <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
+        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
+    </p>
+</footer>
+
 </body>
 </html>
