--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -308,6 +308,16 @@
     });
 
     track.addEventListener('touchend', () => { isDragging = false; });
+
+    // CounterAPI para Windows
+    document.getElementById('btnWin').addEventListener('click', () => {
+        fetch("https://api.counterapi.dev/v2/rs/Win/increment")
+            .then(res => res.json())
+            .then(data => {
+                console.log("Contador actualizado:", data);
+            })
+            .catch(err => console.error("Error al incrementar contador:", err));
+    });
 </script>
 
 <footer>
