--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -226,13 +226,13 @@
     Seleccione su sistema operativo para iniciar la descarga de RustDesk.
 </p>
 
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-   class="download-link" id="btnWin" download>
+<a href="#" 
+   class="download-link" id="btnWin">
    <img src="windows.svg" alt="Windows"> Descargar para Windows
 </a>
 
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-   class="download-link" id="btnMac" download>
+<a href="#" 
+   class="download-link" id="btnMac">
    <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
@@ -249,31 +249,12 @@
 
 <script>
     const gif = document.getElementById('downloadGif');
+    const buttons = [document.getElementById('btnWin'), document.getElementById('btnMac')];
 
-    // CounterAPI y GIF combinados para Windows
-    document.getElementById('btnWin').addEventListener('click', e => {
-        e.preventDefault();
-        gif.style.display = 'block';
-        fetch("https://api.counterapi.dev/v2/rs/Win/up")
-            .then(res => res.json())
-            .then(data => {
-                console.log("Contador Windows actualizado:", data);
-                window.location.href = "https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe";
-            })
-            .catch(err => console.error("Error al incrementar contador Windows:", err));
-    });
-
-    // CounterAPI y GIF combinados para macOS
-    document.getElementById('btnMac').addEventListener('click', e => {
-        e.preventDefault();
-        gif.style.display = 'block';
-        fetch("https://api.counterapi.dev/v2/rs/Mac/up")
-            .then(res => res.json())
-            .then(data => {
-                console.log("Contador Mac actualizado:", data);
-                window.location.href = "https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg";
-            })
-            .catch(err => console.error("Error al incrementar contador Mac:", err));
+    buttons.forEach(btn => {
+        btn.addEventListener('click', () => {
+            gif.style.display = 'block';
+        });
     });
 
     const track = document.querySelector('.carousel-track');
@@ -319,6 +300,31 @@
     });
 
     track.addEventListener('touchend', () => { isDragging = false; });
+
+    // CounterAPI y descarga corregido para que suba 1 en 1
+    document.getElementById('btnWin').addEventListener('click', e => {
+        e.preventDefault();
+        gif.style.display = 'block';
+        fetch("https://api.counterapi.dev/v2/rs/Win/up")
+            .then(res => res.json())
+            .then(data => {
+                console.log("Contador Windows actualizado:", data);
+                window.open("https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe");
+            })
+            .catch(err => console.error("Error al incrementar contador Windows:", err));
+    });
+
+    document.getElementById('btnMac').addEventListener('click', e => {
+        e.preventDefault();
+        gif.style.display = 'block';
+        fetch("https://api.counterapi.dev/v2/rs/Mac/up")
+            .then(res => res.json())
+            .then(data => {
+                console.log("Contador Mac actualizado:", data);
+                window.open("https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg");
+            })
+            .catch(err => console.error("Error al incrementar contador Mac:", err));
+    });
 </script>
 
 <footer>
