--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -226,13 +226,14 @@
     Seleccione su sistema operativo para iniciar la descarga de RustDesk.
 </p>
 
+<!-- Quitamos download de los links para evitar doble conteo -->
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-   class="download-link" id="btnWin" download>
+   class="download-link" id="btnWin">
    <img src="windows.svg" alt="Windows"> Descargar para Windows
 </a>
 
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-   class="download-link" id="btnMac" download>
+   class="download-link" id="btnMac">
    <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
