--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -212,7 +212,7 @@
     <img src="rustdesk-logo.png" alt="RustDesk Logo">
     <img src="solzze-logo.png" alt="Solzze Logo">
     <img src="rs-logo.png" alt="RS Logo">
-    Distribución verificada de RustDesk en asociación con Robert Software – Solución profesional de conexión remota utilizada para brindar soporte técnico confiable, rápido y seguro. Descargue las versiones más recientes y certificadas para Windows y macOS.
+    Distribución verificada de RustDesk por Robert Software – Herramienta profesional de conexión remota utilizada para brindar soporte técnico profesional, seguro y confiable a nuestros clientes. Descargue las versiones más recientes y certificadas para Windows y macOS.
   </div>
 </div>
 
@@ -330,7 +330,7 @@
 </script>
 
 <footer>
-    <p>Distribución verificada de RustDesk en asociación con <strong>Robert Software</strong> – Solución profesional de conexión remota utilizada para brindar soporte técnico confiable, rápido y seguro.</p>
+    <p><em>Asistencia remota profesional y confiable para sus sistemas y equipos, gestionada por Robert Software.</em></p>
     <p>© 2025 Robert Software. Todos los derechos reservados.</p>
     <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
         <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
